RESOLVED FIXED48853
WebProcessManager informed about crashes too late (pages may have already tried to load a new URL)
https://bugs.webkit.org/show_bug.cgi?id=48853
Summary WebProcessManager informed about crashes too late (pages may have already tri...
Mike Thole
Reported 2010-11-02 11:01:44 PDT
The WebProcessProxy informs the WebProcessManager about crashes AFTER it informs the individual pages about the crash. This can cause individual pages to try to reload a new URL using the dead WebProcess. The WebProcessProxy should tell the shared WebProcessManager abut the crash before telling the individual pages.
Attachments
Proposed patch (2.50 KB, patch)
2010-11-02 11:04 PDT, Mike Thole
andersca: review+
Mike Thole
Comment 1 2010-11-02 11:04:28 PDT
Created attachment 72699 [details] Proposed patch
Eric Seidel (no email)
Comment 2 2010-11-10 14:15:03 PST
Attachment 72699 [details] was posted by a committer and has review+, assigning to Mike Thole for commit.
Mike Thole
Comment 3 2010-11-10 14:21:39 PST
<rdar://problem/8610451> Committed revision 71135.
Note You need to log in before you can comment on or make changes to this bug.