WebKit2/UIProcess/WebProcessProxy.cpp
@@ -399,6 +399,10 @@ CoreIPC::SyncReplyMode WebProcessProxy::didReceiveSyncMessage(CoreIPC::Connectio
 
 void WebProcessProxy::didClose(CoreIPC::Connection*)
 {
+    // Protect ourselves, as the call to the shared WebProcessManager's processDidClose()
+    // below may otherwise cause us to be deleted before we can finish our work.
+    RefPtr<WebProcessProxy> protect(this);
+    
     m_connection = nullptr;
     m_responsivenessTimer.stop();
 
@@ -412,13 +416,13 @@ void WebProcessProxy::didClose(CoreIPC::Connection*)
     Vector<RefPtr<WebPageProxy> > pages;
     copyValuesToVector(m_pageMap, pages);
 
+    m_context->processDidClose(this);
+
+    WebProcessManager::shared().processDidClose(this, m_context);
+
     for (size_t i = 0, size = pages.size(); i < size; ++i)
         pages[i]->processDidCrash();
 
-    m_context->processDidClose(this);
-
-    // This may cause us to be deleted.
-    WebProcessManager::shared().processDidClose(this, m_context);
 }
 
 void WebProcessProxy::didReceiveInvalidMessage(CoreIPC::Connection*, CoreIPC::MessageID messageID)
